--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Login</title>
 
     <link rel="stylesheet" href="/static/stylesheet.css" />
   </head>
@@ -16,19 +16,24 @@
       <div class="right">
         <div class="first">
           <img src="/static/images/logo_insta.png" height="70px" />
-          <input
-            class="input_box"
-            type="email"
-            placeholder="Enter email address"
-            id="email"
-          />
-          <input
-            class="input_box"
-            type="password"
-            placeholder="Password"
-            id="pass"
-          />
-          <div class="btnlogin" onclick="login()">Log in</div>
+          <form action="login" method="post">
+            {% csrf_token %}
+            <input
+              class="input_box"
+              type="name"
+              placeholder="Enter email address"
+              name="email"
+              id="email"
+            />
+            <input
+              class="input_box"
+              type="password"
+              placeholder="Password"
+              name="pass"
+              id="pass"
+            />
+            <button class="btnlogin">Log in</button>
+          </form>
           <div class="orfirst">
             <div class="hrline">
               <hr />
@@ -73,7 +78,5 @@
         </div>
       </div>
     </div>
-
-    <script src="main.js"></script>
   </body>
 </html>
